--- a/estilos.css
+++ b/estilos.css
@@ -1,44 +1,355 @@
-body {
+ body{
     background-color: yellow;
-}
-
-.contenedor {
-    position: relative;
-    width: 1100px;
-    margin: 100px auto;
-    border: 300px solid rgb(255, 255, 255);
-    background-color: white;
+    margin: 0;
     display: flex;
-    height: 100px;
-    width: 400px;  
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+ }
+
+ .contenedor {
+    text-align: center;
 }
 
-.contenedor img {
-    position: relative; 
-    top: -170%; 
-    left: 46%; 
+.cuadro {
+    width: 1030px;
+    height: 700px;
+    background-color: #ffffff;
+    border: 2px solid #ffffff;
+    border-radius: 10px;
+
 }
 
-.barra {
-    position: relative;
-    top: -60%;
-    left: 59%;
+.cuadro img {
+    width: 30%;
+    height: 17%;
+    margin-left: 440px;
+    margin-top: 90px;
 }
 
-.barracontraseña {
-    position: relative;
-    top: 125%;
-    left: -27px;
-}
-
-.iniciar {
-    position: relative;
-    top: 124%;
-    left: 108px;
-}
-
-.logo2 {
-    margin-top: -100px; 
-    margin-left: -550px;
+.barra-correo {
+    margin-left: 510px;
+    margin-top: 70px;
+    background-color: rgb(241, 241, 241);
+    border-color: rgb(241, 241, 241);
+    width: 24%;
+    padding: 20px;
+    border-radius: 50px;
+    transition: border-color 0.3s ease;
+    height: 5px;
+    margin-bottom: 15px;
+    padding-left: 40px;
+    font-size: 22px;
     
 }
+
+.barra-contraseña {
+    margin-left: 510px;
+    margin-top: 25px;
+    background-color: rgb(241, 241, 241);
+    border-color: rgb(241, 241, 241);
+    width: 24%;
+    padding: 20px;
+    border-radius: 50px; 
+    transition: border-color 0.3s ease;
+    height: 5px;
+    margin-bottom: 15px;
+    padding-left: 40px;
+    font-size: 22px;
+    
+}
+
+.barra-contraseña:hover {
+    border-color: #979797; 
+}
+
+.barra-correo:hover {
+    border-color: #979797; 
+}
+
+
+.btn-iniciar-sesion {
+    background-color: blue;
+    color: white;
+    padding: 15px 51px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    display: block; 
+    margin-top: 15px;
+    margin-left: 667px;
+    border-radius: 50px;
+}
+
+.btn-iniciar-sesion:hover {
+    background-color: darkblue;
+}
+
+.Olvidaste-Usuario-Contraseña  {
+    margin-top: 20px;
+    font-size: 18px;
+    margin-left: 518px;
+    font-family: 'Arial', sans-serif;
+}
+
+
+.Olvidaste-Usuario-Contraseña a {
+    color: blue; 
+    text-decoration: none; 
+    margin-left: 5px; 
+}
+
+.Olvidaste-Usuario-Contraseña a:hover {
+    color: darkblue; 
+}
+
+.Crear-Cuenta  {
+    margin-top: 25px;
+    font-size: 18px;
+    margin-left: 518px;
+    font-family: 'Arial', sans-serif;
+}
+
+
+.Crear-Cuenta a {
+    color: rgb(0, 0, 255); 
+    text-decoration: none; 
+    margin-left: 5px; 
+}
+
+.Crear-Cuenta a:hover {
+    color: rgb(0, 0, 122); 
+}
+
+.bounce-in-top {
+	-webkit-animation: bounce-in-top 1.1s both;
+	        animation: bounce-in-top 1.1s both;
+}
+
+@-webkit-keyframes bounce-in-top {
+    0% {
+      -webkit-transform: translateY(-500px);
+              transform: translateY(-500px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+      opacity: 0;
+    }
+    38% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+      opacity: 1;
+    }
+    55% {
+      -webkit-transform: translateY(-65px);
+              transform: translateY(-65px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    72% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    81% {
+      -webkit-transform: translateY(-28px);
+              transform: translateY(-28px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    90% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    95% {
+      -webkit-transform: translateY(-8px);
+              transform: translateY(-8px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    100% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+  }
+  @keyframes bounce-in-top {
+    0% {
+      -webkit-transform: translateY(-500px);
+              transform: translateY(-500px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+      opacity: 0;
+    }
+    38% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+      opacity: 1;
+    }
+    55% {
+      -webkit-transform: translateY(-65px);
+              transform: translateY(-65px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    72% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    81% {
+      -webkit-transform: translateY(-28px);
+              transform: translateY(-28px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    90% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    95% {
+      -webkit-transform: translateY(-8px);
+              transform: translateY(-8px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    100% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+}
+
+.imagen {
+    margin-top: -100%; 
+    margin-left: -500px; 
+    width: 400px; 
+    height: auto; 
+    padding: 100px;
+
+}
+    
+.imagen {
+	-webkit-animation: bounce-in-left 1.1s both;
+	        animation: bounce-in-left 1.1s both;
+}
+
+
+@-webkit-keyframes bounce-in-left {
+    0% {
+      -webkit-transform: translateX(-600px);
+              transform: translateX(-600px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+      opacity: 0;
+    }
+    38% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+      opacity: 1;
+    }
+    55% {
+      -webkit-transform: translateX(-68px);
+              transform: translateX(-68px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    72% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    81% {
+      -webkit-transform: translateX(-28px);
+              transform: translateX(-28px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    90% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    95% {
+      -webkit-transform: translateX(-8px);
+              transform: translateX(-8px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+  }
+  @keyframes bounce-in-left {
+    0% {
+      -webkit-transform: translateX(-600px);
+              transform: translateX(-600px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+      opacity: 0;
+    }
+    38% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+      opacity: 1;
+    }
+    55% {
+      -webkit-transform: translateX(-68px);
+              transform: translateX(-68px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    72% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    81% {
+      -webkit-transform: translateX(-28px);
+              transform: translateX(-28px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    90% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    95% {
+      -webkit-transform: translateX(-8px);
+              transform: translateX(-8px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+}
+
